--- a/javascript-part/touch-app.css
+++ b/javascript-part/touch-app.css
@@ -24,7 +24,7 @@
 
 #touch-app header{
   background-color:#424242;
-  border-bottom: 5px solid #8BC34A;
+  border-bottom: 5px solid #AEEA00;
   color:white;
   height:40px;
   padding-left: 10px;
@@ -61,12 +61,12 @@
 }
 
 #touch-rg .breadcrumb a{
-  color:#8BC34A;
+  color:#2E7D32;
   text-decoration: none;
 }
 
 #touch-rg .breadcrumb a.current{
-  color:#9E9E9E;
+  color:#757575;
 }
 
 #touch-rg .prompt{
@@ -135,7 +135,7 @@
 }
 
 #touch-rg .back .icon-section .icon{
-  color:#8BC34A;
+  color:#2E7D32;
 }
 
 #touch-rg .back:hover{
@@ -223,8 +223,9 @@
 }
 
 #touch-pcs .survey-form .form-footer button{
-  background:linear-gradient(#AED581,#9CCC65);
-  color:white;
+  /*background:linear-gradient(#8BC34A,#33691E); hass accessibility issue with contrast*/
+  background-color: #33691E;
+  color:#EEEEEE;
   font-size:14px;
   width:110px;
   height:30px;
